EA-4358 Update to new ObjectStorage version